updating properties in prep for 3.3 release

--- a/protege-core/trunk/src/edu/stanford/smi/protege/resource/files/build.properties
+++ b/protege-core/trunk/src/edu/stanford/smi/protege/resource/files/build.properties
@@ -4,6 +4,6 @@ build.number=414
 build.number.previous=413
 name=Prot\u00E9g\u00E9
 copyright=Copyright (c) 1998-2007 Stanford University
-build.status=beta
+build.status=
 build.version=3.3
 trademark=Prot\u00E9g\u00E9 is a trademark of Stanford University
