--- a/protege-core/trunk/build.xml
+++ b/protege-core/trunk/build.xml
@@ -234,9 +234,9 @@
 
     <target name="install" depends="jar">
        <copy file="dist/protege.jar" todir="${protege.home}"/>
+       <copy file="logging.properties" todir="${protege.home}"/>
        <copy todir="${protege.home}">
-          <fileset dir="dist" includes="protege.jar"/>
-          <fileset dir="./lib" includes="*.jar"/>
+          <fileset dir="./lib" includes="*.jar" excludes="junit.jar"/>
           <fileset dir="bin">
              <include name="*.sh"/>
              <include name="*.bat"/>
