--- a/junit.properties.template
+++ b/junit.properties.template
@@ -4,10 +4,44 @@
 # database tests.  Database tests will need to be run differently for a 
 # developer at Stanford or University of Manchester, a developer in a system 
 # that is offline or a developer at some other site.
+
+
+#
+# These are general controls for how all the junits run.
+#
+#     My experience is that "ant junit" provides almost no debugging
+#     information when things go wrong.  (This was not true in my
+#     previous job and I don't know the difference. log4j??)  When there is a
+#     problem I generally use my development environment to debug
+#     faulting junit.  For scripting problems with the junits the options
+#
+#        filtertrace="false" 
+#        showoutput="true"
+#
+#     give a little more information.  Also when you know that some
+#     junits are failing, removing the option 
+#
+#        haltonfailure = "on" 
+#
+#     is helpful for showing all the failures.  But in the committed
+#     version I think that this option is very important because it
+#     means that the developer will never mistakenly believe that
+#     junits have succeeded.
+#
+
+junit.filtertrace=true
+junit.showoutput=false
+junit.haltonerror=on
+junit.haltonfailure=on
+junit.includes=**/*Test.java
+junit.memory=700M
+
+
 #
 # By default everything here should be marked as not configured so that a 
 # random user can run tests.
 #
+
 
 #--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==
 # The server test depends on the rmi_registry to be running.  The
