--- a/protege-core/trunk/junit-logging.properties
+++ b/protege-core/trunk/junit-logging.properties
@@ -14,7 +14,7 @@
 
 handlers=java.util.logging.FileHandler
 java.util.logging.FileHandler.level=ALL
-java.util.logging.FileHandler.pattern=%t/protege_%g.log
+java.util.logging.FileHandler.pattern=logs/protege_junit.log
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.append="true"
 
