--- a/src/edu/stanford/smi/protege/resource/files/build.properties
+++ b/src/edu/stanford/smi/protege/resource/files/build.properties
@@ -1,7 +1,7 @@
-#Wed Oct 24 15:47:45 PDT 2007
+#Tue Nov 06 18:11:10 PST 2007
+build.number.previous=108
+build.number=109
 build.version.previous=3.3.1
-build.number=108
-build.number.previous=107
 name=Prot\u00E9g\u00E9
 copyright=Copyright (c) 1998-2007 Stanford University
 build.status=beta
