--- a/src/edu/stanford/smi/protege/resource/files/build.properties
+++ b/src/edu/stanford/smi/protege/resource/files/build.properties
@@ -1,9 +1,10 @@
+#Thu, 04 Mar 2010 20:19:32 -0800
 #Wed Feb 03 14:21:19 PST 2010
-build.number.previous=571
-build.number=572
+build.number.previous=572
+build.number=573
 build.version.previous=3.4.3
-name=Prot\u00E9g\u00E9
-copyright=Copyright \u00A9 1998-2010 Stanford University
+name=Prot\u00e9g\u00e9
+copyright=Copyright \u00a9 1998-2010 Stanford University
 build.status=
 build.version=3.4.4
-trademark=Prot\u00E9g\u00E9 is a trademark of Stanford University
+trademark=Prot\u00e9g\u00e9 is a trademark of Stanford University
