Added a menu item to the Help menu that opens a wiki page with instructions for citing Protege.  Also added a link at the bottom of the About dialog to the same wiki page.

--- a/protege-core/trunk/src/edu/stanford/smi/protege/resource/files/protege_text.properties
+++ b/protege-core/trunk/src/edu/stanford/smi/protege/resource/files/protege_text.properties
@@ -103,9 +103,13 @@ detach_view.mnemonic=D
 look_and_feel=Look And Feel
 
 help_menu.getting_started=Getting Started
+help_menu.getting_started.mnemonic=G
 help_menu.faq=Frequently Asked Questions
+help_menu.faq.mnemonic=F
 help_menu.users_guide=User's Guide
+help_menu.users_guide.mnemonic=U
 help_menu.ontologies_101=Ontology Development 101
+help_menu.ontologies_101.mnemonic=O
 help_menu.plugins=Plugins
 help_menu.icons=Icons
 help_menu.icons.mnemonic=I
@@ -113,6 +117,8 @@ help_menu.about=About {0}...
 help_menu.about.mnemonic=A
 help_menu.about_plugins=About Plugins...
 help_menu.about_plugins.mnemonic=P
+help_menu.cite_protege=How to Cite Prot\u00E9g\u00E9
+help_menu.cite_protege.mnemonic=C
 
 component.configure=Menu
 
