--- a/protege-core/trunk/logging.properties
+++ b/protege-core/trunk/logging.properties
@@ -31,7 +31,7 @@ java.util.logging.FileHandler.pattern=%t/protege_%u.log
 #
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 
-java.util.logging.ConsoleHandler.level=CONFIG
+java.util.logging.ConsoleHandler.level=FINE
 java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.ConsoleFormatter
 
 #
@@ -48,6 +48,9 @@ java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.Console
 # large number of error messages.
 #
 edu.stanford.smi.protege.model.framestore.EventDispatchFrameStore.level=FINE
+
+edu.stanford.smi.protege.server.socket.MonitoringInputStream.level=FINE
+edu.stanford.smi.protege.server.socket.MonitoringOutputStream.level=FINE
 
 # This is useful for debugging connection problems when Protege client
 # tries to connect to the server. 
