stopped lastUsageInvocation fro the frame calculator thread

--- a/logging.properties
+++ b/logging.properties
@@ -49,8 +49,8 @@ java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.Console
 #
 edu.stanford.smi.protege.model.framestore.EventDispatchFrameStore.level=FINE
 
-edu.stanford.smi.protege.server.socket.MonitoringInputStream.level=FINE
-edu.stanford.smi.protege.server.socket.MonitoringOutputStream.level=FINE
+#edu.stanford.smi.protege.server.socket.MonitoringInputStream.level=FINE
+#edu.stanford.smi.protege.server.socket.MonitoringOutputStream.level=FINE
 
 # This is useful for debugging connection problems when Protege client
 # tries to connect to the server. 
