finding the right logging settings for a debug session takes time. It is good to save the results in a useful place

--- a/logging.properties
+++ b/logging.properties
@@ -49,20 +49,28 @@ java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.Console
 #
 edu.stanford.smi.protege.model.framestore.EventDispatchFrameStore.level=FINE
 
+
+#
+#  Logging settings used to successfully debug the ValueCachingNarrowFrameStore cache
+#
+#edu.stanford.smi.protege.util.transaction.cache.level=FINE
+#edu.stanford.smi.protege.storage.database.ValueCachingNarrowFrameStore.level=FINER
+#edu.stanford.smi.protege.util.transaction.cache.impl.ValueCachingNFS.level=FINER
+
+#
+#  Logging settings used to see data passed in and out of the Protege server
+#
 #edu.stanford.smi.protege.server.socket.MonitoringInputStream.level=FINE
 #edu.stanford.smi.protege.server.socket.MonitoringOutputStream.level=FINE
 
-# This is useful for debugging connection problems when Protege client
-# tries to connect to the server. 
-edu.stanford.smi.protege.server.ServerPanel.level=FINE
+#
+#  Logging settings used to debug problems with the client-server connections
+#
+#edu.stanford.smi.protege.server.ServerPanel.level=FINE
 
-
-
-
-#org.protege.client.cache.level=FINE
 
 #
-# RMI logging
+#  Logging settings used for very low level rmi debugging - has this worked?
 #
 #sun.rmi.client.call.level=FINEST
 #sun.rmi.server.call.level=FINEST
@@ -71,7 +79,7 @@ edu.stanford.smi.protege.server.ServerPanel.level=FINE
 
 
 #
-# Debugging server-client performance
+#  Logging settings used to debug server-client performance
 #
 #sun.rmi.client.call.level=FINEST
 #edu.stanford.smi.protege.server.framestore.FrameCalculator.level=FINEST
